<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.akhenaton.scanrateitapp.features.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ratings"
        android:name="com.akhenaton.scanrateitapp.features.ratings.RatingsFragment"
        android:label="@string/menu_ratings"
        tools:layout="@layout/fragment_ratings" />

    <fragment
        android:id="@+id/nav_my_data"
        android:name="com.akhenaton.scanrateitapp.features.mydata.MyDataFragment"
        android:label="@string/menu_my_data"
        tools:layout="@layout/fragment_my_data" />

</navigation>